2010-06-08  Vadim Kurland  <vadim@vk.crocodile.org>

	* IPTImporter.cpp (IPTImporter::IPTImporter): fixed #1511, SF bug 3012953:
	iptables import parse error icmp_type any

2010-06-07  Vadim Kurland  <vadim@vk.crocodile.org>

	* CompilerDriver_pix_run.cpp (CompilerDriver_pix::pixNetworkZoneChecks):
	fixed #1491 fwb_pix crashes trying to compile simple rule. Compiler
	should check validity of the object used as network zone of an interface.

	* FWBSettings.cpp (FWBSettings::init): fixed #1501 call qsrand(seed)
	to seed random generator before generating new UUID

	* TransferDevice.h (fwtransfer): fixed #1490 compile problem with
	Qt 4.7

	* FWWindow.cpp (FWWindow::prepareRulesMenu): fixed #1489 removed
	unnecessary debugging messages.

	* interfaceProperties.cpp (interfaceProperties::manageIpAddresses):
	fixed #1506 SF bug #3011516: generated iptables script tries to
	update ip addresses of unnumbered interface.

	* v4.0.2 started

2010-06-06  vadim  <vadim@vk.crocodile.org>

	* FWBSettings.cpp (FWBSettings::FWBSettings): using separate
	settings object and file in the .ini format to store instance uuid
	to ensure uuid persistence on windows across upgrades done with
	complete deinstall. Fixes #1497

	* UserWorkflow.cpp (UserWorkflow::flagsToQueryString): added user
	workflow progress flags for an attempted install and first
	successful install. Both flags are boolean true/false indicating
	that the even occurred. We do not track and do not report any
	information about the firewall, platform, rules etc. These flags
	will be used to determine how many users abandon the program
	before even trying to run install for real because it is too
	complicated or the UI is not good enough. Fixes #1495

	* UserWorkflow.cpp (UserWorkflow::flagsToQueryString): added user
	workflow flag indicating that ssh/scp have been configured in the
	Prefereces dialog. The flag is boolean and registers only the fact
	that something was entered in ssh and scp fields. Actual path and